# myqupy

./: .doit.db  .gitignore  README.md  pyproject.toml
src/myqupy/: plugin.py
tests/: conftest.py  test_mypy.py  test_myqupy.py
