# pyproject.toml

[build-system]

requires = [ "whey[readme]" ]
build-backend = "whey"

[project]

name = "myqupy"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = [
   "mypy",
   "unit",
   "physics",
   "quantity",
   "dimension",
   "static"
]

authors = [{name = "tom65536", email = "peregrinus@planet.ms"}]
maintainers = [{name = "tom65536", email = "peregrinus@planet.ms"}]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed"
]

dependencies = [
    "mypy~=1.0"
]

[project.optional-dependencies]

dev = [
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "pytest-mypy-testing",
    "doitoml[format]",
    "quantities"
]

[project.urls]

homepage = "https://github.com/tom65536/myqupy/"
documentation = "https://github.com/tom65536/myqupy/"
repository = "https://github.com/tom65536/myqupy/"


[tool.mypy]
python_version = "3.10"
plugins = ["myqupy.plugin"]
follow_imports = "silent"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_reexport = true
ignore_missing_imports = true
show_error_codes = true
cache_dir = ".cache/mypy/"

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = [
  "-ra",
  "--capture=no",
  "--strict-markers",
  "--cov-report=term-missing:skip-covered",
  "--no-cov-on-fail",
]
cache_dir = ".cache/pytest/"

[tool.doit]
loader = "doitoml"
verbosity = 2

[tool.doitoml.tasks.test]
actions = ['pytest .']