# pyproject.toml

[build-system]

requires = [ "whey[readme]" ]
build-backend = "whey"

[project]

name = "myqupy"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = [
   "mypy",
   "unit",
   "physics",
   "quantity",
   "dimension",
   "static"
]

authors = [{name = "tom65536", email = "peregrinus@planet.ms"}]
maintainers = [{name = "tom65536", email = "peregrinus@planet.ms"}]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed"
]

dependencies = [
    "mypy~=1.0"
]

[project.optional-dependencies]

dev = [
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "doitoml[format]",
    "quanstants"
]

[project.urls]

homepage = "https://github.com/tom65536/myqupy/"
documentation = "https://github.com/tom65536/myqupy/"
repository = "https://github.com/tom65536/myqupy/"

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = [
  "-v",
  "-ra",
  "--capture=no",
  "--strict-markers",
  "--cov-report=term-missing:skip-covered",
  "--no-cov-on-fail",
]
markers = ["mypy", "mypy_xfail"]
cache_dir = ".cache/pytest/"

[tool.doit]
loader = "doitoml"
verbosity = 2

[tool.doitoml.tasks.test]
actions = ['pytest .']